master: Adicionando comentários markdown

--- a/visualizacao.ipynb
+++ b/visualizacao.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualização e Análise dos Dados\n",
+    "A partir dos dados minerados e armazenados em ```'data.csv'```, separaremos eles em 2 conjuntos diferentes, conjunto de teste e de validação.\n",
+    "\n",
+    "Cada conjunto conterá as ```42``` issues com label de ```difficult``` e ```42``` difrentes issues com label de ```good first issue```. Por fim plotaremos um gráfico boxplot de cada atributo relacionado a cada conjunto, calculando em seguida o ```p-value```. Através do ```p-value``` identificaremos a semelhança entre os dois conjunto separados por nós.\n",
+    "\n",
+    "Caso a nossa hipótese nula seja negada, utilizaremos o teste estátistico ```effect size```, com o objetivo de verificar quão significante é aquela característica para definição do conjunto. Ao fim, identificaremos quais são as características mais relevantes para definição dos conjuntos, caracterizados por valores maiores do que ```0.2```, representando uma característica que tem efeito médio.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -13,6 +25,15 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from scipy.stats import mannwhitneyu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excluindo colunas dos dados minerados que não serão utilizados\n",
+    "\n",
+    "A partir do arquivo que contém todos os dados minerados, excluiremos as colunas  ```'Number'```, ```'Closed_date'``` e ```'Merge_date'```, que não serão utilizadas para análise que será realizada no futuro."
    ]
   },
   {
@@ -240,6 +261,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Separando dados apenas por issues fechadas\n",
+    "Abaixo separamos os conjuntos  ```fáceis``` e  ```dificeis``` contendo apenas issues  ```fechadas```."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -248,6 +277,14 @@
     "# separar os dados em faceis/difíceis\n",
     "dfEasy = df.loc[(df['Situation'] == 'Closed') & (df['Nivel'] == 'Easy')]\n",
     "dfDifficult = df.loc[(df['Situation'] == 'Closed') & (df['Nivel'] == 'Difficult')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Separando dados em conjuntos de teste e validação\n",
+    "Para análise dos dados e verificação da distribuição em conjuntos diferentes, separamos os dados em dois conjuntos, validação e teste, os quais contém as mesmas  ```42``` issues fáceis e ```42``` diferentes issues classificadas como dificeis."
    ]
   },
   {
@@ -482,6 +519,14 @@
    ],
    "source": [
     "dfAll.groupby('Nivel').describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plotando boxplot e realização de testes estátistico \n",
+    "Primeiramente, plotamos um boxblot para cada atributo da base de dados (treino, teste e validação), e em seguida é feito o cálculo do valor de ```p-value``` para eles. Considerando que o valor de ```p-value``` seja menor que ```0.05```, podemos negar a hipótese nula, ou seja, podemos afirmar que ambos conjuntos são estátisticamente distintos, e caso forem, calculamos o valor de ```d``` (significância), para saber quão distintos eles realmente são."
    ]
   },
   {
