master: Ajustando README

--- a/mineracao.ipynb
+++ b/mineracao.ipynb
@@ -36,7 +36,7 @@
     "import pandas as pd\n",
     "from github import Github\n",
     "from datetime import datetime\n",
-    "from github_token import GITHUB_TOKEN, GITHUB_TOKEN_2\n",
+    "from github_token import GITHUB_TOKEN\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -69,8 +69,7 @@
    ],
    "source": [
     "# criar instancia do github com o token\n",
-    "g = Github(GITHUB_TOKEN_2)\n",
-    "GITHUB_TOKEN_2"
+    "g = Github(GITHUB_TOKEN)"
    ]
   },
   {
