--- a/visualizacao.ipynb
+++ b/visualizacao.ipynb
@@ -944,7 +944,7 @@
     "    U1, p = mannwhitneyu(dfAll.loc[dfAll['Nivel'] == 'Difficult', column].values.tolist(), dfAll.loc[dfAll['Nivel'] == 'Easy Train', column].values.tolist(), method=\"exact\")\n",
     "\n",
     "    if p < 0.05:\n",
-    "        print('Hipotese nula regeitada para os dados: Dificil X Easy Train\\np: ', p)\n",
+    "        print('Hipotese nula rejeitada para os dados: Dificil X Easy Train\\np: ', p)\n",
     "        d = cohend(dfAll.loc[dfAll['Nivel'] == 'Difficult', column].values.tolist(), dfAll.loc[dfAll['Nivel'] == 'Easy Train', column].values.tolist())\n",
     "\n",
     "        text = ''\n",
@@ -959,12 +959,12 @@
     "\n",
     "        print('d: ', d, '\\nPelo valor de \"d\", temos que a diferença dos conjuntos é', text, end='\\n\\n')\n",
     "    else:\n",
-    "        print('Não podemos regeitar a hipotese nula para os dados: Dificil X Easy Train\\np: ', p, end='\\n\\n')\n",
+    "        print('Não podemos rejeitar a hipotese nula para os dados: Dificil X Easy Train\\np: ', p, end='\\n\\n')\n",
     "\n",
     "    U1, p = mannwhitneyu(dfAll.loc[dfAll['Nivel'] == 'Difficult', column].values.tolist(), dfAll.loc[dfAll['Nivel'] == 'Easy valid', column].values.tolist(), method=\"exact\")\n",
     "\n",
     "    if p < 0.05:\n",
-    "        print('Hipotese nula regeitada para os dados: Dificil X Easy Valid\\np: ', p)\n",
+    "        print('Hipotese nula rejeitada para os dados: Dificil X Easy Valid\\np: ', p)\n",
     "        d = cohend(dfAll.loc[dfAll['Nivel'] == 'Difficult', column].values.tolist(), dfAll.loc[dfAll['Nivel'] == 'Easy valid', column].values.tolist())\n",
     "\n",
     "        text = ''\n",
@@ -979,7 +979,7 @@
     "\n",
     "        print('d: ', d, '\\nPelo valor de \"d\", temos que a diferença dos conjuntos é', text, end='\\n\\n')\n",
     "    else:\n",
-    "        print('Não podemos regeitar a hipotese nula para os dados: Dificil X Easy Valid\\np: ', p, end='\\n\\n')\n"
+    "        print('Não podemos rejeitar a hipotese nula para os dados: Dificil X Easy Valid\\np: ', p, end='\\n\\n')\n"
    ]
   }
  ],
